Modifying rate limiting to catch today's bot
